# nerdy-weeks-shipping-containers

./: .gitignore  README.md
.github/workflows/: commit.yml  cron.yml  dispatch.yml  docker-action.yml  test.yml
exercises/03/: 02.md  Dockerfile
exercises/ex01-anatomy/: 00.md  01.md  02.md  03.md  04.md
exercises/ex02-ubuntu/: 00.md  01.md  02.md  03.md  04.md  05.md
exercises/ex03-volumes/: 00.md  01.md  02.md  test.py
exercises/ex04-dockerfile/: 00.md  01.md  02.md
exercises/ex04-dockerfile/bonus-with-poetry/: Dockerfile  cow.py  pyproject.toml
exercises/ex05-postgres/: 00.md  01.md  02.md  03.md  test.sql
exercises/ex06-docker-compose/: 00.md  01.md  02.md  03.md
exercises/ex06-docker-compose/nodejs/: Dockerfile  docker-compose.yml
exercises/ex06-docker-compose/postgres/: docker-compose.yml
exercises/ex07-prisma/: 00.md  docker-compose.yml
exercises/ex07-prisma-api/: 00.md  docker-compose.yml
exercises/ex08-docker-network/: 00.md  README.md  docker-compose.yml
exercises/ex09-publishing/: 00.md  01.md  03-bonus.md
exercises/ex10-github-docker-action/: 00.md  action.yml  script.py
exercises/ex11-cra-nginx/: 00.md
exercises/ex12-nginx-reverse-proxy/: 00.md  docker-compose.yml
exercises/ex13-r-opencpu/: 00.md
exercises/ex14-masterportal/: 00.md
exercises/ex15-misc/: 00.md  01.md  04.md
final/ex1/: README.md
final/ex10/: Dockerfile  README.md  action.yml  script.py
final/ex2/: README.md
final/ex3/: README.md
final/ex4/: README.md
final/ex5/: README.md
final/ex6/: README.md  docker-compose.yml
final/ex9/: README.md
(+27 files in other folders)
